# VkLearning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  project_setup.md
cmake/: CI.CTestScript.cmake  Warnings.cmake
code/: CMakeLists.txt  main.cpp
code/core/: CMakeLists.txt
code/core/include/: CMakeLists.txt
code/core/include/App/: App.hpp  CMakeLists.txt
code/core/include/Config/: CMakeLists.txt
code/core/private/: CMakeLists.txt
code/core/public/: CMakeLists.txt
code/core/public/Config/: CMakeLists.txt
code/core/src/: CMakeLists.txt
code/core/src/App/: App.cpp  CMakeLists.txt
code/core/src/Config/: CMakeLists.txt
